@@ -4,7 +4,8 @@
 
 ** Next
 
-- Added support for =shr=.
+- Added support for =shr=. See [[https://github.com/mssola/soria/commit/cc225f51ea724d8767f97249d8c6b3fc5182d331][cc225f51ea72]].
+- Added support for =diredfl=.
 
 ** 0.4.1
 
